--- a/Server/package.json
+++ b/Server/package.json
@@ -1,12 +1,15 @@
 {
   "name": "crud",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --host 192.168.100.84 crud.json -p 3003"
+    "start": "json-server  --watch crud.json"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "json-server": "^0.17.3"
+  }
 }
